# card-designs

./: LICENSE-CARDS.md  README.md  cards.yaml  pyproject.toml
.github/workflows/: static.yml
images/: images.md
sources/: dynalist.md
templates/: card.html  index.header.html
web/: index.html
